Add: port & pin concepts

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -56,7 +56,7 @@ FUSES      = -U lfuse:w:0xc2:m -U hfuse:w:0xd9:m -U efuse:w:0xff:m
 # Tune the lines below only if you know what you are doing:
 
 AVRDUDE = avrdude $(PROGRAMMER) -p $(DEVICE)
-COMPILE = avr-g++ -std=c++2a -Wall -Os -DF_CPU=$(CLOCK) -mmcu=$(DEVICE)
+COMPILE = avr-g++ -std=c++2a -Wall -Os -DF_CPU=$(CLOCK) -mmcu=$(DEVICE) -fconcepts
 SIMULATE = simavr -f $(CLOCK) -m $(DEVICE)
 
 # symbolic targets:
